--- a/setup.cfg
+++ b/setup.cfg
@@ -1,10 +1,15 @@
 [upload_docs]
 upload-dir = doc/.build/html
+
 [nosetests]
 cover-package = kanbanpad
 detailed-errors = 1
 with-coverage = 1
+
 [build_sphinx]
 source-dir = doc
 build-dir = doc/.build
 all-files = 1
+
+[egg_info]
+tag_build = 'alpha'
