--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 minversion = 1.0
-envlist = py24, py25, py26, py27, py31, rst, sphinx
+envlist = py25, py26, py27, rst, sphinx
 
 [testenv]
 deps =
@@ -22,4 +22,4 @@ deps =
     sphinxcontrib-cheeseshop
 commands =
     # Test HTML output
-    sphinx-build -W -b html -d {envtmpdir}/doctrees doc {envtmpdir}/html
+    sphinx-build -W -b html -d {envtmpdir}/doctrees doc/source {envtmpdir}/html
