Added projects.Project simple model

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,9 +2,9 @@
 upload-dir = doc/.build/html
 
 [nosetests]
-cover-package = kanbanpad
-detailed-errors = 1
-with-coverage = 1
+;cover-package = kanbanpad
+;detailed-errors = 1
+;with-coverage = 1
 
 [build_sphinx]
 source-dir = doc
